--- a/tasks/templates/signup.html
+++ b/tasks/templates/signup.html
@@ -15,11 +15,11 @@
             </div>
             <div class="mb-3">
                <label for="password1">Password:</label>
-               <input type="text" name="password1" class="form-control" placeholder="write your password" id="password1">
+               <input type="password" name="password1" class="form-control" placeholder="write your password" id="password1">
             </div>
             <div class="mb-3">
                <label for="password2">Confirm your password</label>
-               <input type="text" name="password2" class="form-control" placeholder="Confirm your password" id="password2">
+               <input type="password" name="password2" class="form-control" placeholder="Confirm your password" id="password2">
             </div>
             <button class="btn btn-primary">Signup</button>
          </form>
